# pacwrap

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  SECURITY.md  build.rs  makefile  pacshrap  pacshrap-sync  sbcreate  sbexecute  sbshell  sbupdate
.forgejo/workflows/: build.yml
.github/workflows/: build.yml
docs/: README.md  config.md  manual.md
docs/dbus/: README.md  appindicator.md  socket.md  xdg_portal.md
docs/filesystems/: README.md  home.md  root.md  to_home.md  to_root.md
docs/modules/: dev.md  display.md  env.md  gpu.md  net.md  pipewire.md  pulseaudio.md
pacwrap/: Cargo.toml  README.md  build.rs
pacwrap-agent/: Cargo.toml  README.md  build.rs
pacwrap-agent/src/: agent.rs  error.rs  main.rs
pacwrap-core/: Cargo.toml  README.md  build.rs  sync.rs
pacwrap-core/src/: config.rs  constants.rs  error.rs  exec.rs  lib.rs  lock.rs  log.rs  process.rs  sync.rs  utils.rs
pacwrap-core/src/config/: cache.rs  container.rs  dbus.rs  filesystem.rs  global.rs  init.rs  instance.rs  permission.rs  register.rs  vars.rs
pacwrap-core/src/config/dbus/: appindicator.rs  socket.rs  xdg_portal.rs
pacwrap-core/src/config/filesystem/: dir.rs  home.rs  root.rs  sys.rs  tmp.rs  to_home.rs  to_root.rs  xdg_home.rs
pacwrap-core/src/config/permission/: dev.rs  display.rs  env.rs  gpu.rs  net.rs  none.rs  pipewire.rs  pulseaudio.rs
pacwrap-core/src/exec/: args.rs  path.rs  seccomp.rs  utils.rs
pacwrap-core/src/sync/: event.rs  filesystem.rs  progress_event.rs  resolver.rs  resolver_local.rs  schema.rs  transaction.rs  utils.rs
pacwrap-core/src/sync/event/: download.rs  progress.rs  query.rs  summary.rs
pacwrap-core/src/sync/transaction/: aggregator.rs  commit.rs  container.rs  prepare.rs  stage.rs  uptodate.rs
pacwrap-core/src/utils/: ansi.rs  arguments.rs  bytebuffer.rs  prompt.rs  table.rs  termcontrol.rs
pacwrap-lib/: Cargo.toml
pacwrap-lib/src/: constants.rs  exec.rs  lib.rs  sync.rs
pacwrap-lib/src/config/: init.rs  permission.rs
pacwrap-lib/src/config/permission/: net.rs  none.rs  pulseaudio.rs
pacwrap-lib/src/exec/: utils.rs
pacwrap-lib/src/sync/: resolver_local.rs  transaction.rs  utils.rs
pacwrap-lib/src/sync/transaction/: aggregator.rs  commit.rs  stage.rs
pacwrap/src/: compat.rs  compose.rs  exec.rs  help.rs  main.rs  manual.rs  proc.rs  query.rs  remove.rs  sync.rs  utils.rs
pacwrap/src/help/: config.rs  manual.rs  version.rs
pacwrap/src/utils/: delete.rs  desktop.rs  edit.rs  list.rs  symlink.rs
src/: compat.rs  config.rs  constants.rs  exec.rs  log.rs  main.rs  manual.rs  sync.rs  utils.rs
src/config/: cache.rs  dbus.rs  filesystem.rs  init.rs  instance.rs  permission.rs  vars.rs
src/config/dbus/: appindicator.rs  socket.rs  xdg_portal.rs
src/config/filesystem/: dir.rs  root.rs  sys.rs  to_home.rs  to_root.rs
src/config/permission/: dev.rs  display.rs  env.rs  gpu.rs  net.rs  none.rs  pipewire.rs  pulseaudio.rs  x11.rs
src/exec/: args.rs  utils.rs
src/sync/: dl_event.rs  filesystem.rs  linker.rs  progress_event.rs  query_event.rs  resolver.rs  resolver_local.rs  transaction.rs  update.rs  utils.rs
src/sync/transaction/: aggregator.rs  commit.rs  prepare.rs  prepare_foreign.rs  stage.rs  unhandled.rs  uptodate.rs
src/utils/: arguments.rs  byteunit.rs  prompt.rs  termcontrol.rs
