[package]
name = "pacwrap-agent"
version = "0.8.5"
authors = [ "Xavier Moffett <sapphirus@azorium.net>" ]
license ="GPL-3.0-only"
readme = "README.md"
edition = "2021"
rust-version = "1.72"

homepage = "https://pacwrap.sapphirus.org/"
repository = "https://github.com/pacwrap/pacwrap"

description = "Executable agent for conducting containerized transactions"
keywords = [ "bubblewrap", "sandbox", "package", "manager", "archlinux" ]
categories = [ "command-line-utilities", "virtualization", "filesystem", "concurrency", "caching" ]

[dependencies]
pacwrap-core = { path = "../pacwrap-core", version = "0.8.4" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

# Packaging
alpm = { version = "4.0.0", features = ["checkver"] }
