[package]
name = "pacwrap-agent"
description = "Executable agent for conducting containerized transactions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

homepage.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[dependencies.alpm]
workspace = true

[dependencies.pacwrap-core]
workspace = true
