[package]
name = "pacwrap-core"
description = "Library providing core functionality for pacwrap"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

homepage.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2.4.2"
lazy_static = "1.4.0"
nix = "0.22.3, <= 0.22.3"
time = { version = "0.3.28", features = ["formatting", "macros", "local-offset", "parsing"] }
indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
simplebyteunit = "0.2.1"
walkdir = "2.3.3"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9.33, <= 0.9.33"
typetag="0.2"
dyn-clone = "1.0.14"
bincode = "1.3.3"

#Container runtime
command-fds = "0.2.2"
os_pipe = "1.1.4"
libseccomp = "0.3.0"
signal-hook = "0.3.15"

# Packaging
pacmanconf = "2.0.0"
tar = "0.4"
zstd = "0.13.0"

# Threading
rayon = "1.7.0"

# CLI libraries
dialoguer = "0.10.4"
indicatif = "0.17.5"

#Cryptography
sha2 = "0.10.8"

[dependencies.alpm]
workspace = true
