[package]
name = "pacwrap"
version = "0.8.4"
authors = [ "Xavier Moffett <sapphirus@azorium.net>" ]
license ="GPL-3.0-only"
readme = "README.md"
edition = "2021"
rust-version="1.72"
default-run = "pacwrap"

homepage = "https://pacwrap.sapphirus.org/"
repository = "https://github.com/pacwrap/pacwrap"

description = "Facilitates the creation, management, and execution of unprivileged Arch-based bubblewrap containers."
keywords = [ "bubblewrap", "sandbox", "package", "manager", "archlinux" ]
categories = [ "command-line-utilities", "virtualization", "filesystem", "concurrency", "caching" ]

[dependencies]
pacwrap-core = { path = "../pacwrap-core/", version = "0.8.4" }
indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
nix = "0.22.3, <= 0.22.3"
simplebyteunit = "0.2.1"

# Container runtime
command-fds = "0.2.2"
signal-hook = "0.3.15"
os_pipe = "1.1.4"

# Packaging
alpm = { version = "3.0.5", features = ["checkver"] }

# Miscellaneous
sha2 = "0.10.8"
regex = "1.10.3"
rand = "0.8.5"

[build-dependencies]
pacwrap-core = { path = "../pacwrap-core/", version = "0.8.4" }
