[package]
name = "pacwrap"
description = "A package manager which facilitates Arch-based bubblewrap containers."
default-run = "pacwrap"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

homepage.workspace = true
repository.workspace = true

[dependencies]
pacwrap-core = { path = "../pacwrap-core/" }
indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
nix = "0.22.3, <= 0.22.3"
simplebyteunit = "0.2.1"

# Container runtime
command-fds = "0.2.2"
signal-hook = "0.3.15"
os_pipe = "1.1.4"

# Packaging
alpm = { version = "4.0.1", features = ["checkver"] }

# Miscellaneous
sha2 = "0.10.8"
regex = "1.10.3"
rand = "0.8.5"

[build-dependencies]
pacwrap-core = { path = "../pacwrap-core/" }
